--- a/src/main/resources/static/admin-add-new-game.html
+++ b/src/main/resources/static/admin-add-new-game.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <h1>Добавление игры</h1>
-<form action="/games/">
+<form action="/admin/games/">
     <button type="submit">Назад к списку игр</button>
 </form>
 <br>
-<form method="post" action="/games">
+<form method="post" action="/admin/games">
     <label>Название:
         <input required style="width: 400px" name="name" placeholder="The Last of Us">
     </label>
@@ -48,12 +48,13 @@
     <br>
     <br>
     <label>Путь к файлу с постером:
-        <input required type="file" name="poster">
+        <input required type="file" accept="image/*" name="poster">
     </label>
     <br>
     <br>
     <label>Описание:
-        <input style="width: 400px; height: 100px" type="text" name="description">
+        <textarea style="width: 400px; height: 100px" name="description" th:text="${game.getDescription()}">
+            </textarea>
     </label>
     <br>
     <br>
